--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
 
+	// Thymeleaf
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
 	// model mapper
 	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 
